--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -892,7 +892,9 @@ section {
 }
 
 .menu .menu-content::after {
-  content: "......................................................................" "...................................................................." "....................................................................";
+  content: "......................................................................"
+ "...................................................................."
+ "....................................................................";
   position: absolute;
   left: 20px;
   right: 0;
@@ -1313,7 +1315,7 @@ section {
 --------------------------------------------------------------*/
 .testimonials {
   padding: 80px 0;
-  background: url("../img/testimonials-bg.jpg") no-repeat;
+  background: url("../images/sefed.jfif") no-repeat;
   background-position: center center;
   background-size: cover;
   position: relative;
