--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,7 +1,16 @@
 #sliderImage{
-    background-repeat: no-repeat;
-    width:fit-content;
-    height: 100%;
-    background-size: cover;
+    background-image: url('../images/ethiopian-cultural-dining.jpg' ) ;
+    background: cover no-repeat !important
     
+}
+#specialSize img{
+    height: 200px;
+    width: 200px;
+    border:transparent ;
+    border-radius: 60%;
+}
+
+#chefSize img{
+    height: 300px;
+    width: 300px;
 }
