--- a/project_restaurant/restaurant/templates/restaurant/base.html
+++ b/project_restaurant/restaurant/templates/restaurant/base.html
@@ -93,18 +93,19 @@
   </main>
     <footer id="footer">
         <div class="container">
-        <h3>El Delicios d'Etiopia</h3>
-        <p>Fresh and Delicious Ethiopian Food just for you</p>
+        {% if footer %}
+        <h3>{{ footer.footerTitle }}</h3>
+        <p>{{ footer.footerBody }}</p>
         <div class="social-links">
-            <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
-            <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
-            <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
-            <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
-            <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+            <a href="{{ footer.twitterLink }}" class="twitter"><i class="bx bxl-twitter"></i></a>
+            <a href="{{ footer.facebookLink }}" class="facebook"><i class="bx bxl-facebook"></i></a>
+            <a href="{{ footer.instagramLink }}" class="instagram"><i class="bx bxl-instagram"></i></a>
+            <a href="{{ footer.linkedinLink }}" class="linkedin"><i class="bx bxl-linkedin"></i></a>
         </div>
         <div class="copyright">
-            &copy; Copyright <strong><span>El Delicios d'Etiopia</span></strong>. All Rights Reserved
+            &copy; Copyright {{ footer.year }} <strong><span>{{ footer.footerTitle }}</span></strong>. {{ footer.copyrightText }}
         </div>
+        {% endif %}
         
         </div>
     </footer>
