--- a/project_restaurant/restaurant/templates/restaurant/home.html
+++ b/project_restaurant/restaurant/templates/restaurant/home.html
@@ -18,8 +18,8 @@
                 <h2 class="animate__animated animate__fadeInDown"><span>{{hero.restaurantName}}</span> Restaurant</h2>
                 <p class="animate__animated animate__fadeInUp">{{hero.restaurantMotto}}</p>
                 <div>
-                  <a href="#menu" class="btn-menu animate__animated animate__fadeInUp scrollto">Our Menu</a>
-                  <a href="#book-a-table" class="btn-book animate__animated animate__fadeInUp scrollto">Book a Table</a>
+                    <a href="#book-a-table" class="btn-book animate__animated animate__fadeInUp scrollto">Order Delivery</a>
+                    <a href="#book-a-table" class="btn-book animate__animated animate__fadeInUp scrollto">Book a Table</a>
                 </div>
               </div>
             </div>
@@ -532,35 +532,17 @@
             </div>
           </div>
         </div>
-
-        <form action="{% url 'contactus' %}" method="POST" enctype="text/plain" role="form" class="php-email-form">
-          {% csrf_token %}
-          <div class="form-row">
-            <div class="col-md-6 form-group">
-              <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" data-rule="minlen:4" data-msg="Please enter at least 4 chars" />
-              <div class="validate"></div>
+        <div class="row">
+          <div class="col-6 info mx-0 d-flex justify-content-end">
+          <a href="{{ links.whatsappLink }}" class="whatsapp"><i class="bx bxl-whatsapp"></i></a>
+                
+          </div>
+          <div class="col-6 info mx-0 d-flex justify-content-start">
+          <a href="{{ links.telegramLink }}" class="telegram"><i class="bx bxl-telegram"></i></a>
+            
+          </div>
+        
             </div>
-            <div class="col-md-6 form-group">
-              <input type="email" class="form-control" name="email" id="email" placeholder="Your Email" data-rule="email" data-msg="Please enter a valid email" />
-              <div class="validate"></div>
-            </div>
-          </div>
-          <div class="form-group">
-            <input type="text" class="form-control" name="subject" id="subject" placeholder="Subject" data-rule="minlen:4" data-msg="Please enter at least 8 chars of subject" />
-            <div class="validate"></div>
-          </div>
-          <div class="form-group">
-            <textarea class="form-control" name="message" rows="5" data-rule="required" data-msg="Please write something for us" placeholder="Message"></textarea>
-            <div class="validate"></div>
-          </div>
-          <div class="mb-3">
-            <div class="loading">Loading</div>
-            <div class="error-message"></div>
-            <div class="sent-message">Your message has been sent. Thank you!</div>
-          </div>
-          <div class="text-center"><button type="submit">Send Message</button></div>
-        </form>
-
 
       </div>
     </section>
