--- a/project_restaurant/restaurant/templates/restaurant/base.html
+++ b/project_restaurant/restaurant/templates/restaurant/base.html
@@ -54,7 +54,7 @@
         <nav class="nav-menu d-none d-lg-block">
             <ul>
             <li class="active"><a href="{% url 'restaurant-home'%}">Home</a></li>
-            <li><a href="#about">About</a></li>
+            <li><a href="{% url 'reservation'%}">About</a></li>
             <li><a href="#menu">Menu</a></li>
             <li><a href="#specials">Specials</a></li>
             <li><a href="#events">Events</a></li>
@@ -62,7 +62,7 @@
             <li><a href="#gallery">Gallery</a></li>
             <li><a href="#contact">Contact</a></li>
 
-            <li class="book-a-table text-center"><a href="#book-a-table"><i class="icofont-food-cart"></i> Delivery</a></li>
+            <li class="book-a-table text-center"><a href="{% url 'reservation'%}"><i class="icofont-food-cart"></i> Delivery</a></li>
             </ul>
         </nav>
         </div>
@@ -79,7 +79,7 @@
   {% block specials %} {% endblock %}
 
   {% block events %} {% endblock %}
-  
+
   {% block book-a-table %} {% endblock %}
 
   {% block gallery %} {% endblock %}
