--- a/project_restaurant/restaurant/templates/restaurant/reservation.html
+++ b/project_restaurant/restaurant/templates/restaurant/reservation.html
@@ -1,39 +1,133 @@
 {% extends "restaurant/base.html" %}
-{% load crispy_forms_tags %}
 {% load static %}
 
+<!DOCTYPE html>
+<html lang="en">
 
-  {% block book-a-table %} 
-    <section id="hero">
-    <div class="hero-container">
-      <div id="heroCarousel" class="carousel slide carousel-fade" data-ride="carousel">
+<head>
+  <meta charset="utf-8">
+  <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-        <ol class="carousel-indicators" id="hero-carousel-indicators"></ol>
+  <title>El Delicios d'Etiopia</title>
+  <meta content="" name="description">
+  <meta content="" name="keywords">
 
-        <div class="carousel-inner" role="listbox">
+  <!-- Favicons -->
+  <link href="{% static 'restaurant/images/favicon.png' %}" rel="icon">
+  <link href="{% static 'restaurant/images/apple-touch-icon.png' %}" rel="apple-touch-icon">
 
-          <!-- Slide 1 -->
-          <div class="carousel-item active" id="sliderImage" >
-            <div class="carousel-container">
-              <div class="carousel-content">
-                <section id="book-a-table" class="book-a-table">
-                  <div class="container">
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css?family=Poppins:300,300i,400,400i,600,600i,700,700i|Satisfy|Comic+Neue:300,300i,400,400i,700,700i" rel="stylesheet">
 
-                    <div class="section-title">
-                      <h2>Book a <span>Table</span></h2>
-                    
-                    </div>
-                    <form class="php-email-form">
-                    {{ form|crispy }}
-                    </form>
+  <!-- Vendor CSS Files -->
+  <link href="{% static 'restaurant/vendor/bootstrap/css/bootstrap.min.css' %}" rel="stylesheet">
+  <link href="{% static 'restaurant/vendor/icofont/icofont.min.css' %}" rel="stylesheet">
+  <link href="{% static 'restaurant/vendor/boxicons/css/boxicons.min.css' %}" rel="stylesheet">
+  <link href="{% static 'restaurant/vendor/animate.css/animate.min.css' %}" rel="stylesheet">
+  <link href="{% static 'restaurant/vendor/venobox/venobox.css' %}" rel="stylesheet">
+  <link href="{% static 'restaurant/vendor/owl.carousel/assets/owl.carousel.min.css' %}" rel="stylesheet">
 
-                  </div>
-                </section>                  
-              </div>
-            </div>
-          </div>       
-        </div>
-      </div>
+
+  <link href="{% static 'restaurant/css/style.css' %}" rel="stylesheet">
+  <link href="{% static 'restaurant/css/main.css' %}" rel="stylesheet">
+
+
+</head>
+
+<body>
+
+
+  <section id="topbar" class="d-none d-lg-flex align-items-center fixed-top topbar-transparent">
+    <div class="container text-right">
+      <i class="icofont-phone"></i>632 80 21 45
+     
     </div>
   </section>
-  {% endblock %}
+
+    <header id="header" class="fixed-top d-flex align-items-center header-transparent">
+        <div class="container d-flex align-items-center">
+        
+        <div class="logo mr-auto">
+            <h1 class="text-light"><a href="{% url 'restaurant-home'%}"><span>El Delicios d'Etiopia</span></a></h1>
+        
+        </div>
+       
+
+        <nav class="nav-menu d-none d-lg-block">
+            <ul>
+            <li class="active"><a href="{% url 'restaurant-home'%}">Home</a></li>
+            <li><a href="{% url 'reservation'%}">About</a></li>
+            <li><a href="#menu">Menu</a></li>
+            <li><a href="#specials">Specials</a></li>
+            <li><a href="#events">Events</a></li>
+            <li><a href="#chefs">Chefs</a></li>
+            <li><a href="#gallery">Gallery</a></li>
+            <li><a href="#contact">Contact</a></li>
+
+            <li class="book-a-table text-center"><a href="{% url 'reservation'%}"><i class="icofont-food-cart"></i> Delivery</a></li>
+            </ul>
+        </nav>
+        </div>
+    </header>
+<br><br><br><br>
+<main id="main"> 
+<center>
+  <h1>Review Your Information:</h1>
+  <!-- <strong>Your name:</strong> {{your_name}} -->
+  <strong>Phone:</strong> {{your_phone}} <br>
+  <strong>Email:</strong> {{your_email}} <br>
+  <strong>Date:</strong> {{date}} <br>
+  <strong>Time:</strong> {{time}} <br>
+  <strong>Number of People:</strong> {{number_of_people}} <br>
+  <strong>Message:</strong> {{message}}
+  <br>
+  <br><br><br>
+<strong>We will contact you shortly to confirm your reservation.</strong>
+<br><br><br>
+
+</center>
+
+
+</main>
+<footer id="footer">
+    <div class="container">
+    {% if footer %}
+    <h3>{{ footer.footerTitle }}</h3>
+    <p>{{ footer.footerBody }}</p>
+    <div class="social-links">
+        <a href="{{ links.twitterLink }}" class="twitter"><i class="bx bxl-twitter"></i></a>
+        <a href="{{ links.facebookLink }}" class="facebook"><i class="bx bxl-facebook"></i></a>
+        <a href="{{ links.instagramLink }}" class="instagram"><i class="bx bxl-instagram"></i></a>
+        <a href="{{ links.linkedinLink }}" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+    </div>
+    <div class="copyright">
+        &copy; Copyright {{ footer.year }} <strong><span>{{ footer.footerTitle }}</span></strong>. {{ footer.copyrightText }}
+    </div>
+    {% endif %}
+    
+    </div>
+</footer>
+
+<a href="#" class="back-to-top"><i class="icofont-simple-up"></i></a>
+
+
+<script src="{% static 'restaurant/vendor/jquery/jquery.min.js' %}"></script>
+<script src="{% static 'restaurant/vendor/bootstrap/js/bootstrap.bundle.min.js' %}"></script>
+<script src="{% static 'restaurant/vendor/jquery.easing/jquery.easing.min.js' %}"></script>
+<script src="{% static 'restaurant/vendor/php-email-form/validate.js' %}"></script>
+<script src="{% static 'restaurant/vendor/jquery-sticky/jquery.sticky.js' %}"></script>
+<script src="{% static 'restaurant/vendor/isotope-layout/isotope.pkgd.min.js' %}"></script>
+<script src="{% static 'restaurant/vendor/venobox/venobox.min.js' %}"></script>
+<script src="{% static 'restaurant/vendor/owl.carousel/owl.carousel.min.js' %}"></script>
+
+
+<script src="{% static 'restaurant/js/main.js' %}"></script>
+
+</body>
+
+</html>
+
+
+
+
+   
