--- a/project_restaurant/restaurant/templates/restaurant/home.html
+++ b/project_restaurant/restaurant/templates/restaurant/home.html
@@ -18,7 +18,7 @@
                 <h2 class="animate__animated animate__fadeInDown"><span>{{hero.restaurantName}}</span> Restaurant</h2>
                 <p class="animate__animated animate__fadeInUp">{{hero.restaurantMotto}}</p>
                 <div>
-                    <a href="#book-a-table" class="btn-book animate__animated animate__fadeInUp scrollto">Order Delivery</a>
+                    <a href="{% url 'order'%}" class="btn-book animate__animated animate__fadeInUp scrollto">Order Delivery</a>
                     <a href="#book-a-table" class="btn-book animate__animated animate__fadeInUp scrollto">Book a Table</a>
                 </div>
               </div>
